# gmail-interface

./: .gitignore  gmail_interface.py  pyproject.toml  requirements.in  tox.ini
src/gmail_interface/: __init__.py  gmail_interface.py
tests/integration_tests/: test_gmail_interface.py
